[package]
name = "indracore-parachain"
version = "0.3.0"
authors = ["Selendra <info@selendra.org>"]
description = "Types and utilities for creating and working with parachains"
edition = "2018"

[dependencies]
derive_more = "0.99.11"
parking_lot = { version = "0.11.1", optional = true }
log = { version = "0.4.11", optional = true }
futures = { version = "0.3.8", optional = true }
thiserror = { version = "1.0.22", optional = true }
serde = { version = "1.0.117", default-features = false, features = [ "derive" ], optional = true }
parity-scale-codec = { version = "2.0.0", default-features = false, features = [ "derive" ] }
parity-util-mem = { version = "0.9.0", optional = true }
static_assertions = { version = "1.1", optional = true }
libc = { version = "0.2.81", optional = true }

sp-std = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", default-features = false }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", default-features = false }
sp-core = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", default-features = false }
sp-wasm-interface = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", default-features = false }
sp-externalities = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", optional = true }
sc-executor = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", optional = true }
sp-io = { git = "https://github.com/selendra/substrate", branch = "v2.0.3", optional = true }

indracore-core-primitives = { path = "../core-primitives", default-features = false }

[target.'cfg(not(any(target_os = "android", target_os = "unknown")))'.dependencies]
shared_memory = { version = "0.11.0", optional = true }
raw_sync = { version = "0.1", optional = true }

[features]
default = ["std"]
wasmtime = [ "sc-executor/wasmtime" ]
wasm-api = []
std = [
	"log",
	"libc",
	"futures",
	"raw_sync",
	"thiserror",
	"serde/std",
	"parking_lot",
	"static_assertions",
	"parity-scale-codec/std",
	"sp-io",
	"sc-executor",
	"sp-externalities",
	"sp-std/std",
	"sp-core/std",
	"shared_memory",
	"sp-runtime/std",
	"parity-util-mem",
	"indracore-core-primitives/std",
]
