[package]
name = "indracore-primitives"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.118", optional = true, features = ["derive"] }
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["bit-vec", "derive"] }

sp-core = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-inherents = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-application-crypto = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-keystore = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", optional = true }
sp-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-version = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-std = { package = "sp-std", git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-staking = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-arithmetic = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-authority-discovery = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
sp-trie = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }
frame-system = { git = "https://github.com/selendra/substrate", branch = "v2.0.1", default-features = false }

indracore-core-primitives = { path = "../core-primitives", default-features = false }
indracore-parachain = { path = "../parachain", default-features = false }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "bitvec/std",
    "serde",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-trie/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-keystore",
	"sp-std/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"sp-runtime/std",
    "frame-system/std",
	
	"indracore-core-primitives/std",
]