[package]
name = "indracore-primitives"
version = "0.4.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.123", optional = true, features = ["derive"] }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
thiserror = "1.0.23"
hex-literal = "0.3.1"

parity-scale-codec = { version = "2.0.0", default-features = false, features = ["bit-vec", "derive"] }
parity-util-mem = { version = "0.9.0", default-features = false, optional = true }

frame-system = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
primitives = { package = "sp-core", git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
inherents = { package = "sp-inherents", git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
application-crypto = { package = "sp-application-crypto", git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
trie = { package = "sp-trie", git = "https://github.com/selendra/substrate", branch = "master", default-features = false }

sp-keystore = { git = "https://github.com/selendra/substrate", branch = "master", optional = true }
sp-api = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-version = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-staking = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-arithmetic = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-authority-discovery = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }

indracore-core-primitives = { path = "core-primitives", default-features = false }
indracore-parachain = { path = "../parachains/parachain", default-features = false }

[dev-dependencies]
sp-serializer = { git = "https://github.com/selendra/substrate", branch = "master" }
pretty_assertions = "0.6.1"

[features]
default = [ "std" ]
std = [
    "serde",
    "bitvec/std",
	"parity-scale-codec/std",
	"parity-util-mem",
    "frame-system/std",
    "application-crypto/std",
	"primitives/std",
	"inherents/std",
    "runtime_primitives/std",
    "trie/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"indracore-core-primitives/std",
	"indracore-parachain/std",
]