[package]
name = "selendra-primitives"
version = "0.1.3"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.130", optional = true, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["bit-vec", "derive"] }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
application-crypto = { package = "sp-application-crypto", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", optional = true }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
selendra-parachain = { path = "../modules/parachain", default-features = false }
selendra-core-primitives = { path = "core-primitives", default-features = false }
trie = { package = "sp-trie", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
hex-literal = "0.3.3"
parity-util-mem = { version = "0.10.0", default-features = false, optional = true }


[features]
default = ["std"]
std = [
	"application-crypto/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"primitives/std",
	"inherents/std",
	"trie/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-consensus-slots/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"parity-util-mem",
	"selendra-parachain/std",
	"selendra-core-primitives/std",
	"bitvec/std",
	"frame-system/std",
]
