[package]
name = "indracore-rpc"
version = "0.2.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.1.0"
parity-scale-codec = { version = "1.3.6", default-features = false }

sc-chain-spec = { git = "https://github.com/selendra/substrate", branch = "v2.0.2" }
sc-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.2" }
sc-consensus-babe = { git = "https://github.com/selendra/substrate", branch = "v2.0.2"}
sc-consensus-babe-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.2"}
sc-consensus-epochs = { git = "https://github.com/selendra/substrate", branch = "v2.0.2"}
sc-finality-grandpa = { git = "https://github.com/selendra/substrate", branch = "v2.0.2" }
sc-finality-grandpa-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.2" }
sc-keystore = { git = "https://github.com/selendra/substrate", branch = "v2.0.2"}
sc-sync-state-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.2"}
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.2"  }

sp-block-builder = { git = "https://github.com/selendra/substrate", branch = "v2.0.2" }
sp-blockchain = { git = "https://github.com/selendra/substrate", branch = "v2.0.2"  }
sp-keystore = { git = "https://github.com/selendra/substrate", branch = "v2.0.2"  }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.2"  }
sp-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.2"  }
sp-consensus = { git = "https://github.com/selendra/substrate", branch = "v2.0.2"  }
sp-consensus-babe = { git = "https://github.com/selendra/substrate", branch = "v2.0.2"  }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/selendra/substrate", branch = "v2.0.2" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/selendra/substrate", branch = "v2.0.2"  }
pallet-transaction-payment-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.2" }
pallet-contracts-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.2" }

indracore-primitives = { path = "../primitives" }

