[package]
name = "indracore-rpc"
version = "0.3.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.1.0"
parity-scale-codec = { version = "2.0.0", default-features = false }

sc-chain-spec = { git = "https://github.com/selendra/substrate", branch = "v2.0.3" }
sc-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.3" }
sc-consensus-babe = { git = "https://github.com/selendra/substrate", branch = "v2.0.3"}
sc-consensus-babe-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.3"}
sc-consensus-epochs = { git = "https://github.com/selendra/substrate", branch = "v2.0.3"}
sc-finality-grandpa = { git = "https://github.com/selendra/substrate", branch = "v2.0.3" }
sc-finality-grandpa-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.3" }
sc-keystore = { git = "https://github.com/selendra/substrate", branch = "v2.0.3"}
sc-sync-state-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.3"}
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.3"  }

sp-block-builder = { git = "https://github.com/selendra/substrate", branch = "v2.0.3" }
sp-blockchain = { git = "https://github.com/selendra/substrate", branch = "v2.0.3"  }
sp-keystore = { git = "https://github.com/selendra/substrate", branch = "v2.0.3"  }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.3"  }
sp-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.3"  }
sp-consensus = { git = "https://github.com/selendra/substrate", branch = "v2.0.3"  }
sp-consensus-babe = { git = "https://github.com/selendra/substrate", branch = "v2.0.3"  }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/selendra/substrate", branch = "v2.0.3" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/selendra/substrate", branch = "v2.0.3"  }
pallet-transaction-payment-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.3" }
pallet-contracts-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.3" }

indracore-primitives = { path = "../primitives" }

