[package]
name = "indracore-statement-table"
version = "0.3.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/selendra/substrate", branch = "v2.0.3" }
primitives = { package = "indracore-primitives", path = "../primitives" }
