[package]
name = "xcm"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
description = "The basic XCM datastructures."
edition = "2018"

[dependencies]
parity-scale-codec = { version = "1.3.5", default-features = false, features = [ "derive" ] }

[features]
default = ["std"]
wasm-api = []
std = [
	"parity-scale-codec/std",
]