[package]
name = "frontier-consensus"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"] }
sp-core = { version = "2.0.0", path = "../../primitives/core" }
sp-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
sp-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
sp-api = { version = "2.0.0", path = "../../primitives/api" }
sc-client-api = { version = "2.0.0", path = "../../client/api" }
sp-block-builder = { version = "2.0.0", path = "../../primitives/block-builder" }
sp-inherents = { version = "2.0.0", path = "../../primitives/inherents" }
frontier-consensus-primitives = { version = "0.1.0", path = "primitives" }
sp-consensus = { version = "0.8.0", path = "../../primitives/consensus/common" }
log = "0.4.8"
futures = { version = "0.3.1", features = ["compat"] }
sp-timestamp = { version = "2.0.0", path = "../../frame/timestamp" }
derive_more = "0.99.2"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = ""}
ethereum = { version = "0.3", features = ["codec"] }
