[package]
name = "selendra-erasure-coding"
version = "0.1.4"
authors = ["Selendra info@selendra.org"]
edition = "2018"

[dependencies]
thiserror = "1.0.30"
novelpoly = { package = "reed-solomon-novelpoly", version = "1.0.0" }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["std", "derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
trie = { package = "sp-trie", git = "https://github.com/paritytech/substrate", branch = "master" }

selendra-primitives = { path = "../../primitives" }
selendra-node-primitives = { package = "selendra-node-primitives", path = "../../node/primitives" }
