[package]
name = "evm-accounts"
version = '0.1.0'
authors = ['Selendra <info@selendra.org>']
edition = '2018'

[dependencies]
impl-trait-for-tuples = "0.1.3"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
libsecp256k1 = { version = "0.6.0", default-features = false, features = ["hmac","static-context"] }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10", default-features = false }

pallet-evm = { path = "../../vendors/frontier/frame/evm", default-features = false }
fp-evm = { path = "../../vendors/frontier/primitives/evm", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }

[features]
default = ["std"]
std = [
	"codec/std",
	"libsecp256k1/std",
    "frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"fp-evm/std",
	"pallet-evm/std",
]