[package]
name = "selendra-runtime-metrics"
version = "0.2.2"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false}
parity-scale-codec = { version = "2.3.1", default-features = false }
primitives = { package = "selendra-primitives", path = "../../primitives", default-features = false }

bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-tracing/std",
    "parity-scale-codec/std",
    "primitives/std",
    "bs58/std"
]
runtime-metrics = ["sp-tracing/with-tracing"]
