[package]
name = "selendra-parachain"
version = "0.1.6"
authors = ["Selendra info@selendra.org"]
description = "Types and utilities for creating and working with parachains"
edition = "2018"

[dependencies]
derive_more = "0.99.17"
serde = { version = "1.0.117", default-features = false, features = [ "derive" ], optional = true }
parity-scale-codec = { version = "2.3.1", default-features = false, features = [ "derive" ] }
parity-util-mem = { version = "0.10.0", optional = true }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }

selendra-core-primitives = { path = "../../primitives/core-primitives", default-features = false }

[features]
default = ["std"]
wasm-api = []
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"parity-util-mem",
	"selendra-core-primitives/std",
	"frame-support/std",
]
runtime-benchmarks = []